<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2c6e49"
        android:backgroundTint="#2c6e49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/lowerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:backgroundTint="#fefee3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/lower"
            android:textColor="#6D4C41"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_Card" />

        <Button
            android:id="@+id/higherButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#4c956c"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/higher"
            android:textColor="#fefee3"
            app:layout_constraintEnd_toStartOf="@+id/lowerButton"
            app:layout_constraintTop_toBottomOf="@+id/iv_Card" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="220dp"
            android:layout_height="61dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/take_your_guess"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="208dp"
            android:layout_height="65dp"
            android:layout_marginTop="51dp"
            android:background="#fefee3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#263238"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowerButton"></TextView>

        <ImageView
            android:id="@+id/iv_Card"
            android:layout_width="189dp"
            android:layout_height="245dp"
            android:layout_marginTop="32dp"
            android:background="#2c6e49"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/heartsqueen" />

        <Button
            android:id="@+id/equalbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="96dp"
            android:backgroundTint="#d68c45"
            android:text="@string/equal"
            android:textColor="#6D4C41"
            app:layout_constraintStart_toEndOf="@+id/lowerButton"
            app:layout_constraintTop_toBottomOf="@+id/iv_Card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>