<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2c6e49"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="181dp"
            android:layout_height="213dp"
            android:layout_marginTop="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="220dp"
            android:layout_height="61dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/higher_lower_equal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/higherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#4c956c"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/higher"
            android:textColor="#4A148C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <Button
            android:id="@+id/lowerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#fefee3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/lower"
            android:textColor="#6D4C41"
            app:layout_constraintStart_toEndOf="@+id/higherButton"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="#d68c45"
            android:text="@string/equal"
            android:textColor="#C62828"
            android:textColorHint="#EFEBCE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lowerButton"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/ScoreView"
            android:layout_width="208dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="87dp"
            android:background="#fefee3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Score"
            android:textAlignment="center"
            android:textColor="#263238"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/higherButton" />

        <TextView
            android:id="@+id/RulesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>